# mcp-diagram-tools

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  test_convert.py  test_covid.py  test_process_flow.py  test_render_feature.py  test_workflow_render.py
.github/workflows/: publish.yml
src/mcp_diagram_tools/: __init__.py  __main__.py  server.py
tests/: __init__.py
