[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-diagram-tools"
version = "0.1.0"
description = "MCP server for diagram operations (Excalidraw, draw.io, SVG, Mermaid)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "cegloff" }
]
keywords = ["mcp", "diagram", "excalidraw", "drawio", "svg", "mermaid", "flowchart"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "cairosvg>=2.7.0",
    "lxml>=5.0.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/cegloff/mcp-diagram-tools"
Repository = "https://github.com/cegloff/mcp-diagram-tools"
Issues = "https://github.com/cegloff/mcp-diagram-tools/issues"

[project.scripts]
mcp-diagram-tools = "mcp_diagram_tools.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_diagram_tools"]
